fix: added overflow prop to the section class

--- a/components/organisms/DashboardMain/style.module.scss
+++ b/components/organisms/DashboardMain/style.module.scss
@@ -3,7 +3,6 @@
 
 .main {
     flex: 1;
-
     display: flex;
     background-color: $background-white;
     transition: all .3s;
@@ -11,6 +10,7 @@
     @media (max-width: $tablet) {
         width: 100%;
         height: 100vh;
+        overflow: hidden;
     }
 
     &_inner {
@@ -22,6 +22,7 @@
         @media (max-width: $tablet) {
             padding: .5rem;
             overflow-x: hidden;
+            height: 100vh;
         }
 
         @include scroll-bar;
