--- a/components/templates/Dashboard/style.module.scss
+++ b/components/templates/Dashboard/style.module.scss
@@ -7,6 +7,7 @@
 
     @media (max-width: $tablet) {
         // height: 100vh;
+        overflow: hidden;
         margin: 0;
     }
 }
